# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import usersRouter from "./users";
 import projectsRouter from "./projects";
 import scopesRouter from "./scopes";
 import milestonesRouter from "./milestones";
+import releasesRouter from "./releases";
 import itemsRouter from "./items";
 import commentsRouter from "./comments";
 import timeRouter from "./time";
@@ -45,6 +46,7 @@ router.use("/projects/:slug/labels", ...memberGuard, labelsRouter);
 router.use("/projects/:slug/testing", ...memberGuard, testingRouter);
 router.use("/projects/:slug/scopes", ...memberGuard, scopesRouter);
 router.use("/projects/:slug/milestones", ...memberGuard, milestonesRouter);
+router.use("/projects/:slug/releases", ...memberGuard, releasesRouter);
 router.use("/projects/:slug/items", ...memberGuard, itemsRouter);
 router.use("/projects/:slug/items/:itemNumber/comments", ...memberGuard, commentsRouter);
 router.use("/projects/:slug/items/:itemNumber/dependencies", ...memberGuard, dependenciesRouter);
